layout bug fix

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 100%;
+  width: 60%;
 }
 
 /* Styling for links */
@@ -42,7 +42,7 @@
   transform: scale(1.1); 
 }
 
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
   
   .nav-links {
     width: 80%; 
@@ -65,4 +65,4 @@
     font-size: 0.9rem; 
     margin: 0 0.3rem; 
   }
-} */
+}
